src/objects/mfiflexUtil__votest_charge__c.object
<CustomObject>
    <fields>
        <fullName>mfiflexUtil__Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>mfiflexUtil__date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mfiflexUtil__votest_fees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>votest fees</label>
        <referenceTo>mfiflexUtil__votest_fees__c</referenceTo>
        <relationshipLabel>votest charge</relationshipLabel>
        <relationshipName>votest_charge</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mfiflexUtil__votest_loan_account__c</fullName>
        <label>votest loan account</label>
        <referenceTo>mfiflexUtil__votest_loan_account__c</referenceTo>
        <relationshipLabel>votest charge</relationshipLabel>
        <relationshipName>votest_charge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>votest charge</label>
    <listViews>
        <fullName>mfiflexUtil__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>votest charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>votest charge</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>